--- a/_config.yml
+++ b/_config.yml
@@ -88,25 +88,25 @@ analytics:
 # Site Author
 author:
   name             : "Jens Mohrmann"
-  avatar           : # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : /assets/images/jens.jpg
   bio              : "I am an amazing person."
-  location         : "Germany"
+  location         : "Austria"
   email            :
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
   bitbucket        :
   codepen          :
   dribbble         :
-  flickr           :
-  facebook         :
+  flickr           : "https://www.flickr.com/photos/jensmohrmann/"
+  facebook         : "https://www.facebook.com/jens.mohrmann"
   foursquare       :
   github           :
   gitlab           :
   google_plus      :
   keybase          :
-  instagram        :
+  instagram        : "https://www.instagram.com/jens.mohrmann/"
   lastfm           :
-  linkedin         : # "john-doe-12345678" (the last part of your profile url, e.g. https://www.linkedin.com/in/john-doe-12345678)
+  linkedin         : "jens-mohrmann"
   pinterest        :
   soundcloud       :
   stackoverflow    : # "123456/username" (the last part of your profile url, e.g. https://stackoverflow.com/users/123456/username)
@@ -116,7 +116,7 @@ author:
   vine             :
   weibo            :
   xing             :
-  youtube          : # "https://youtube.com/c/MichaelRoseDesign"
+  youtube          : "https://www.youtube.com/channel/UC_GQKt9lWQGibuskX1bpc-w"
 
 
 # Reading Files
