--- a/_config.yml
+++ b/_config.yml
@@ -97,14 +97,14 @@ author:
   bitbucket        :
   codepen          :
   dribbble         :
-  flickr           : "https://www.flickr.com/photos/jensmohrmann/"
-  facebook         : "https://www.facebook.com/jens.mohrmann"
+  flickr           : "jensmohrmann"
+  facebook         : "jens.mohrmann"
   foursquare       :
-  github           :
+  github           : "9x"
   gitlab           :
-  google_plus      :
+  google_plus      : jens.mohrmann
   keybase          :
-  instagram        : "https://www.instagram.com/jens.mohrmann/"
+  instagram        : "jens.mohrmann"
   lastfm           :
   linkedin         : "jens-mohrmann"
   pinterest        :
