--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ remote_theme: "mmistakes/minimal-mistakes"
 # For technical reasons, this file is *NOT* reloaded automatically when you use
 # `jekyll serve`. If you change this file, please restart the server process.
 
-minimal_mistakes_skin    : "default" # "air", "aqua", "contrast", "dark", "dirt", "neon", "mint", "plum", "sunrise"
+minimal_mistakes_skin    : "dark" # "air", "aqua", "contrast", "dark", "default", "dirt", "neon", "mint", "plum", "sunrise"
 
 # Site Settings
 locale                   : "en-US"
@@ -90,7 +90,7 @@ author:
   name             : "Jens Mohrmann"
   avatar           : /assets/images/jens.jpg
   bio              : "I am an amazing person."
-  location         : "Austria"
+  location         : "Graz, Austria"
   email            :
   uri              :
   home             : # null (default), "absolute or relative url to link to author home"
@@ -102,7 +102,7 @@ author:
   foursquare       :
   github           : "9x"
   gitlab           :
-  google_plus      : jens.mohrmann
+  google_plus      :
   keybase          :
   instagram        : "jens.mohrmann"
   lastfm           :
